various style fixes, removed Google+

--- a/src/less/global/nav.less
+++ b/src/less/global/nav.less
@@ -216,6 +216,8 @@ nav {
             margin-top: 4px;
             display: block;
             width: fit-content;
+            border-radius: 3px;
+            overflow: hidden;
 
             i {
               margin-right: 4px;
@@ -835,6 +837,8 @@ nav {
     border: 1px solid #cfd3e0;
     border-radius: 2px;
     border-top: 0;
+    z-index: 2000;
+    position: relative;
 
     * {
       transition: 0.3s all;
