--- a/src/less/pages/about-page.less
+++ b/src/less/pages/about-page.less
@@ -4,6 +4,10 @@
   margin-bottom: 0;
   font-weight: 500;
 
+  .about-content {
+    margin-bottom: 40px !important;
+  }
+
   .author-container {
     display: flex;
     justify-content: space-between;
