--- a/src/less/posts/languages/shell.less
+++ b/src/less/posts/languages/shell.less
@@ -13,7 +13,7 @@
   .shell,
   .properties,
   .hljs {
-    background-color: #2e3440;
+    background-color: #212733;
     color: #eceff4;
     font-weight: normal;
 
