--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -6,14 +6,16 @@
   overflow: hidden;
   background: #eceff3;
   border-radius: 3px;
+  box-shadow: -1px 1px 0 #d7e2e4;
 
   @media(max-width: 800px) {
     margin: 0 0 30px;
+    padding: 20px 10px 10px;
   }
 
   @media(max-width: 600px) {
     margin: 10px 0 30px;
-    padding-left: 0;
+    padding: 20px 0 10px;
   }
 
   h5 {
@@ -31,7 +33,7 @@
     height: fit-content;
 
     @media(max-width: 800px) {
-      width: 90%;
+      width: 96%;
       margin: 0 auto 2px;
     }
 
