new material design tables

--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -347,7 +347,7 @@
 				@media(max-width: 600px) {
 					font-size: 1em;
 					margin: 0;
-					max-height: 33px;
+					height: 33px !important;
 					padding: 4px 12px;
 					display: none;
 				}
