fixed twitter widget

--- a/partials/widgets/widget-twitter.hbs
+++ b/partials/widgets/widget-twitter.hbs
@@ -1,6 +1,6 @@
  <!-- start feedwind code -->
   <div class="widget twitter">
         <h4 class="title">Twitter</h4>
-      <!-- start feedwind code --> <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="96903/"></script> <!-- end feedwind code --></div>
- <!-- end feedwind code -->
+      <iframe src="https://feed.mikle.com/widget/v2/96903/" height="745px" width="100%" class="fw-iframe" scrolling="no" frameborder="0"></iframe>
+  </div>
 
