--- a/partials/widgets/widget-authortwitter.hbs
+++ b/partials/widgets/widget-authortwitter.hbs
@@ -1,6 +1,6 @@
 <!-- start twitter widget -->
 <div class="widget twitter">
   <h4 class="title">Twitter</h4>
-    <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="78832/"></script>
+    <!-- start feedwind code --> <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="105906/"></script> <!-- end feedwind code -->
 </div>
 <!-- end twitter widget -->
