--- a/post.hbs
+++ b/post.hbs
@@ -32,8 +32,8 @@
 								<a href="{{url}}" class="meta-item author mobile"><i class="fas fa-user" style="width:13px; display:inline-block; margin-right:10px;"></i><span>{{slug}}</span></a>
 							{{/unless}}
 							{{#if profile_image}}
-								<a href="{{url}}" class="meta-item author desktop"><img src="{{img_url profile_image absolute="true" size="extrasmall"}}" alt="{{slug}}'s Author image" class="avi" data-rjs="2"><span>{{name}}</span></a>
-								<a href="{{url}}" class="meta-item author mobile"><img src="{{img_url profile_image absolute="true" size="extrasmall"}}" alt="{{slug}}'s Author image" class="avi" data-rjs="2"><span>{{slug}}</span></a>
+								<a href="{{url}}" class="meta-item author desktop"><img src="{{img_url profile_image absolute="true" size="small"}}" alt="{{slug}}'s Author image" class="avi"><span>{{name}}</span></a>
+								<a href="{{url}}" class="meta-item author mobile"><img src="{{img_url profile_image absolute="true" size="small"}}" alt="{{slug}}'s Author image" class="avi"><span>{{slug}}</span></a>
 							{{/if}}
 						{{/primary_author}}
 						<span class="date meta-item"><i class="fal fa-calendar"></i> <span>{{date format="MMM Do"}}</span></span>
