--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -108,8 +108,9 @@
 		transition: all 0.2s ease-out;
 
 		img {
-			max-width: 100%;
+			width: 100%;
 			border: 1px solid #e3edef;
+			height: auto;
 		}
 
 		@media(max-width: 600px) {
