--- a/author.hbs
+++ b/author.hbs
@@ -19,5 +19,6 @@
 {{#contentFor "scripts"}}
 	<script src="{{asset "js/includes/gh-profile-card.min.js"}}"></script>
 	<script async src="{{asset "js/author.js"}}"></script>
+	<script src="{{asset "js/previews.js"}}"></script>
 {{/contentFor}}
 <!-- end sites main content area -->
