--- a/partials/postpreview.hbs
+++ b/partials/postpreview.hbs
@@ -8,10 +8,19 @@
 
   {{#if feature_image}}
       <picture class="featured-media">
-        <!--<source media="(min-width: 800px)" srcset="{{img_url feature_image size="large"}} 1x, {{img_url feature_image size="large_retina"}} 2x">
-        <source media="(min-width: 600px)" srcset="{{img_url feature_image size="medium"}} 1x, {{img_url feature_image size="medium_retina"}} 2x">--->
+        <source media="(max-width: 600px)" srcset="{{img_url feature_image size="medium"}} 1x, {{img_url feature_image size="medium_retina"}} 2x">
+        <source srcset="{{img_url feature_image size="large"}} 1x, {{img_url feature_image size="large_retina"}} 2x">
         <img alt="{{title}}" class="lazy" src="{{img_url feature_image}}">
     </picture>
+    <!--<img class="post-image"
+    srcset="{{img_url feature_image size="small"}} 300w,
+            {{img_url feature_image size="medium"}} 600w,
+            {{img_url feature_image size="large"}} 1000w,
+            {{img_url feature_image size="extralarge"}} 1500w"
+    sizes="(max-width: 1000px) 400px, 700px"
+    src="{{img_url feature_image size="m"}}"
+    alt="{{title}}"
+/>-->
   {{/if}}
 
   <div class="content">
