--- a/partials/widgets/widget-authorwebsite.hbs
+++ b/partials/widgets/widget-authorwebsite.hbs
@@ -1,9 +1,10 @@
 <!-- start website widget -->
-{{#has "website"}}
-      <div class="widget author-website" style="0">
-          <a href="{{website}}">{{website}}</a>
+{{#if "website"}}
+      <div class="widget author-website">
+          <h4 class="title" style="margin-bottom:0;">Website</h4>
+          <a class="previewimage" href="{{website}}">{{website}}</a>
       </div>
-{{/has}}
+{{/if}}
 <!-- <script>
   $(document).ready(function() {
     function websiteCard(website) {
