--- a/src/less/author/author.less
+++ b/src/less/author/author.less
@@ -6,14 +6,14 @@
 		.avatar {
 			margin: 0 !important;
 			width: 85px;
-	        height: 85px;
-	        float: none;
+	    height: 85px;
+	    float: none;
 		}
 
 		h3 {
 			font-family: 'soleil', serif;
-    	    font-size: 1.5em;
-			margin: 10px;
+    	font-size: 1.5em;
+			margin: 10px 10px 10px 0;
 		}
 
 		a:hover {
@@ -54,6 +54,64 @@
 			content {
 				overflow: hidden;
     		padding: 0;
+			}
+
+			& > a {
+				display: block;
+				overflow: hidden;
+				border: 1px solid mix(@theme-color, #e1e1e1, 20%);
+				margin: 5px 0 0;
+			}
+
+			.link-preview {
+				height: 167px;
+				background-size: cover !important;
+				color: white;
+				position: relative;
+				margin: 0;
+				border: 0;
+				border-radius: 0;
+
+				h4 {
+					position: absolute;
+					bottom: 12px;
+					left: 15px;
+					color: white;
+					z-index: 10;
+					width: 79%;
+					line-height: 1;
+					overflow: hidden;
+					text-overflow: ellipsis;
+					display: block;
+					white-space: nowrap;
+					font-size: 15px;
+					font-family: 'soleil', sans-serif;
+					margin:0;
+				}
+
+				a {
+
+				}
+
+				i {
+					position: absolute;
+					right: 12px;
+					bottom: 12px;
+					z-index: 100;
+					font-size: 14px;
+					color: white;
+				}
+
+				&::after {
+					display: block;
+					position: absolute;
+					background-image: linear-gradient(to bottom, transparent 0%, @theme-color 100%);
+					height: 100%;
+					width: 105%;
+					top: 0;
+					left: 0;
+					content: '';
+				}
 			}
 		}
 
@@ -275,50 +333,5 @@
 		}
 	}
 
-	.link-preview {
-		height: 167px;
-		background-size: cover !important;
-		color: white;
-		position: relative;
-		border: 1px solid mix(@theme-color, #e1e1e1, 20%);
-		margin: 15px 0 0;
-		border: 0;
-		border-radius: 0;
 
-		a {
-			position: absolute;
-			bottom: 12px;
-			left: 15px;
-			color: white;
-			z-index: 10;
-			width: 79%;
-			line-height: 1;
-			overflow: hidden;
-			text-overflow: ellipsis;
-			display: block;
-			white-space: nowrap;
-			font-size: 15px;
-			font-family: 'soleil', sans-serif;
-		}
-
-		i {
-			position: absolute;
-			right: 12px;
-			bottom: 12px;
-			z-index: 100;
-			font-size: 14px;
-			color: white;
-		}
-
-		&::after {
-			display: block;
-			position: absolute;
-			background-image: linear-gradient(to bottom, transparent 0%, @theme-color 100%);
-			height: 100%;
-			width: 105%;
-			top: 0;
-			left: 0;
-			content: '';
-		}
-	}
 }
