--- a/partials/author/author-sidebar.hbs
+++ b/partials/author/author-sidebar.hbs
@@ -1,7 +1,7 @@
 
 <div class="sidebar" class="{{author.slug}}">
   {{> widgets/widget-authorwebsite}}
-	{{> widgets/widget-github}}
+	{{> widgets/widget-authorgithub}}
 	{{> widgets/widget-medium}}
 	{{> widgets/widget-meetup}}
 	{{> widgets/widget-rss}}
