fixed author github widget

--- a/src/less/author.less
+++ b/src/less/author.less
@@ -5,5 +5,5 @@
 /* Page Styles */
 @import 'pages/page.less';
 @import 'author/author.less';
-@import 'author/github.less';
+@import 'author/githubcard.less';
 @import 'pages/cover.less';
