--- a/partials/widgets/widget-authorgithub.hbs
+++ b/partials/widgets/widget-authorgithub.hbs
@@ -1,5 +1,5 @@
 <div class="widget author-github">
   <h4 class="title">Github</h4>
-    <div id="github-card-author" data-max-repos="3" data-sort-by="stars" data-header-text="Repositories">
+    <div id="github-card-author" data-max-repos="3" data-sort-by="stars" data-header-text="Top Repositories">
   </div>
 </div>
