--- a/src/less/author/githubcard.less
+++ b/src/less/author/githubcard.less
@@ -61,7 +61,7 @@
       transition: all 0.2s ease-out;
 
       &:hover {
-        color: white;
+        color: @hover-color;
       }
     }
   }
@@ -80,6 +80,9 @@
     line-height: 1.3;
     background: @theme-color;
     transition: 0.2s all ease-out;
+    border-radius: 2px;
+    overflow: hidden;
+
     @media(max-width: 800px) {
       padding: 8px 12px;
       font-size: 0.7em;
@@ -99,7 +102,7 @@
     color: #444;
     font-size: 0.8em;
     border: 1px solid #BBB;
-    border-radius: 2px;
+
     height: 11px;
     line-height: 1;
   }
@@ -127,7 +130,8 @@
     height: 64px;
     float: left;
     margin: 0 20px 25px 0;
-    border-radius: 2px;
+    border-radius: 3px;
+    overflow: hidden;
     box-shadow: 0 0 2px 0 #DDD;
     @media(max-width: 800px) {
       margin: 0 15px 15px 0;
@@ -158,12 +162,11 @@
       font-size: 0.9em;
       border-top: 0;
       width: auto;
-      background-color: #f7f7fb;
+      /* background-color: #f7f7fb; */
       padding: 10px 16px;
       transition: 0.2s all ease-out;
-      border-bottom: 1px solid #d1d7dc;
-      border-right: 1px solid #d1d7dc;
-      border-left: 0;
+      border: 1px solid #d1d7dc;
+      border-radius: 3px;
 
       &:hover {
         background-color: @theme-color;
@@ -196,11 +199,13 @@
 
     .star {
       position: absolute;
-      font-size: 1em;
+      font-size: 1.2em;
       right: 1em;
       top: 1.6em;
-      color: #ab8102;
+      color: #f1c68e;
       font-weight: 600;
+      /*text-shadow: -1px 1px 0px rgba(202, 150, 72, 1);*/
+      margin-top: -5px;
 
       &::after {
         content: '\a0\2605';
