pruned depreciated logic and packages

--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -161,7 +161,7 @@
                       </ul>
 				</div>
 			</div>
-			{{> projects/kanban}}
+			{{> projects/projects-kanban}}
 		{{/post}}
 	</div>
 	<!-- end main post area -->
