--- a/default.hbs
+++ b/default.hbs
@@ -26,7 +26,7 @@
 <body class="{{body_class}}">
 	{{> nav/header}}
 	{{{body}}}
-	{{> nav/footer}}
+	{{> footer/footer}}
 	{{> scripts}}
 	{{{block "scripts"}}}
 	{{ghost_foot}}
