--- a/partials/footer/footer.hbs
+++ b/partials/footer/footer.hbs
@@ -1,10 +1,10 @@
 <!-- start main-footer -->
 <footer class="main-footer">
 	<div class="footer-container">
-		{{> widgets/widget-about}}
-		{{> widgets/widget-links}}
-		{{> widgets/widget-authors}}
-		{{> widgets/widget-footertags}}
+		{{> footer/footer-about}}
+		{{> footer/footer-links}}
+		{{> footer/footer-authors}}
+		{{> footer/footer-tags}}
 	</div>
 </footer>
 <div class="copyright">
