migrated resources page over to graphql

--- a/custom-post-archive.hbs
+++ b/custom-post-archive.hbs
@@ -13,4 +13,7 @@
 			<!-- end main post area -->
 		</div>
 </section>
+{{#contentFor "scripts"}}
+	<script async src="{{asset "js/postarchive.js"}}"></script>
+{{/contentFor}}
 <!-- end site's main content area -->
