--- a/src/less/pages/resources.less
+++ b/src/less/pages/resources.less
@@ -33,7 +33,7 @@
     tbody {
       tr {
         td:first-of-type {
-          text-align: center;
+          text-align: center !important;
         }
 
 
