--- a/src/less/global/nav.less
+++ b/src/less/global/nav.less
@@ -139,6 +139,10 @@ nav {
       padding-left: 20px;
       font-size: 1em;
       font-family: soleil, sans-serif;
+
+      @media(max-width: 800px) {
+        width: 150px !important;
+      }
     }
   }
 
@@ -825,6 +829,10 @@ nav {
       font-family: soleil, sans-serif;
       font-weight: 300;
     }
+
+    @media(max-width: 800px) {
+          width: 200px;
+    }
   }
 
   #my-custom-results {
@@ -1117,7 +1125,7 @@ nav {
   justify-content: space-between;
   max-width: 400px;
   margin: auto;
-  
+
   @media(max-width: 600px) {
     display: none;
   }
@@ -1149,7 +1157,7 @@ nav {
       background: none;
       color: @text-color !important;
     }
-    
+
     .dropdown-content {
       display: none;
       background: white;
