--- a/src/less/pages/tag-page.less
+++ b/src/less/pages/tag-page.less
@@ -8,6 +8,8 @@
     height: 300px;
     background-color: #192e4c;
     background-blend-mode: multiply;
+    box-shadow: 0 0 5px rgba(65, 67, 144, 0.15);
+
     @media(max-width: 600px) {
       margin-left: calc(~"-50vw + 50%") !important;
       margin-right: calc(~"-50vw + 50%") !important;
