--- a/src/less/projects/kanban.less
+++ b/src/less/projects/kanban.less
@@ -140,7 +140,7 @@
     width: 100%;
     display: block;
     overflow: hidden;
-    height: 710px;
+    height: 750px;
 
     @media(max-width: 800px){
       margin: 30px 0 50px;
@@ -155,10 +155,10 @@
       display: none;
       justify-content: space-between;
       padding: 0;
-      margin: 10px 100px;
-      position: absolute;
-      width: -webkit-fill-available;
+      margin: 10px auto;
+      width: 100%;
       bottom: -50px;
+      max-width: 150px;
 
       @media(max-width: 800px) {
         display: flex;
@@ -196,7 +196,7 @@
       box-shadow: 2px 3px 4px rgba(58, 59, 103, 0.1);
       overflow: hidden;
       display: inline-block;
-      height: 695px;
+      height: 740px;
       margin: 0 2px 0 2px;
 
       &:first-child {
