--- a/src/less/global/tags.less
+++ b/src/less/global/tags.less
@@ -213,10 +213,10 @@
 
   .dataengineering {
     background: #d7dde9;
-    color: #525f86 !important;
+    color: #4c5777 !important;
 
     * {
-      color: #525f86 !important;
+      color: #4c5777 !important;
     }
   }
 
