--- a/src/less/posts/languages/json.less
+++ b/src/less/posts/languages/json.less
@@ -2,7 +2,7 @@
   .json,
   .language-json {
     line-height: 1.4 !important;
-    background: #1e3742;
+    background: #182c35;
     color: #daf7fd;
 
     .attr {
