--- a/src/less/posts/languages/python.less
+++ b/src/less/posts/languages/python.less
@@ -6,7 +6,7 @@
     &.language-python,
     &.python {
       color: #e4f8fd;
-      background: #1c2a3d;
+      background: #142439;
 
       &::before {
         height: auto;
@@ -16,14 +16,14 @@
       }
 
       .meta {
-        color: #ffe090 !important;
+        color: #b1ccd5 !important;
       }
 
       .addition,
       .meta-string,
       .regexp,
       .string {
-        color: #93DCB8 !important;
+        color: #b8ffdc !important;
         font-weight: 100;
         font-family: 'Hack';
       }
@@ -42,7 +42,7 @@
 
       .class,
       .title {
-        color: #ffd712 !important;
+        color: #ffe567 !important;
         font-weight: 700;
         font-family: 'Hack';
       }
