--- a/src/less/posts/languages/markup.less
+++ b/src/less/posts/languages/markup.less
@@ -13,7 +13,7 @@
   .css,
   .http,
   .xml {
-    color: #c5cddc;
+    color: #ecf3ff;
     background: #282c34;
 
     .name {
@@ -26,7 +26,7 @@
     }
 
     .tag {
-      color: #bdccdb;
+      color: #ecf3ff;
 
       .attr,
       .attribute {
