fixes to responsive table

--- a/src/less/posts/languages/python.less
+++ b/src/less/posts/languages/python.less
@@ -6,12 +6,12 @@
     &.language-python,
     &.python {
       color: #e4f8fd;
-      background: #142439;
+      background: #141e39;
 
       &::before {
         height: auto;
         content: "Python" !important;
-        background: rgba(61, 74, 101, 0.4);
+        background: rgba(61, 85, 101, 0.4);
         color: white;
       }
 
