--- a/src/less/posts.less
+++ b/src/less/posts.less
@@ -24,5 +24,5 @@
 @import 'posts/languages/config.less';
 @import 'posts/languages/markup.less';
 
-/* baquette box */
+/* Baquette Box */
 @import 'https://hackers.nyc3.cdn.digitaloceanspaces.com/css/baguettebox.css';
