--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -100,7 +100,7 @@
 			img {
 				width: 100%;
 				line-height: 1;
-				box-shadow: 0 0 3px rgb(79, 87, 169);
+				box-shadow: 0 0 3px rgba(79, 87, 169, .5);
 			}
 		}
 	}
@@ -159,8 +159,8 @@
 	}
 
 	h2 {
-	  	margin: 40px 0 20px;
-    	color: #555560;
+	  margin: 40px 0 10px;
+    color: #555560;
 		line-height: 1.3;
 		font-family: 'ProductSans-Regular', sans-serif;
 		font-weight: 100!important;
@@ -185,7 +185,7 @@
 		font-size: 1.3em;
 		line-height: 1.2;
 		color: #555560;
-		margin: 40px 0 20px;
+		margin: 40px 0 10px;
 		font-family: 'ProductSans-Regular', sans-serif;
 
 		@media(max-width: 800px) {
