post style fixes

--- a/src/less/author/githubcard.less
+++ b/src/less/author/githubcard.less
@@ -162,10 +162,9 @@
       font-size: 0.9em;
       border-top: 0;
       width: auto;
-      /* background-color: #f7f7fb; */
       padding: 10px 16px;
       transition: 0.2s all ease-out;
-      border: 1px solid #d1d7dc;
+      border: 1px solid #e5ebf0;
       border-radius: 3px;
 
       &:hover {
@@ -175,6 +174,10 @@
 
         span {
           color: white;
+        }
+
+        * {
+          cursor: pointer;
         }
       }
 
@@ -202,16 +205,15 @@
       font-size: 1.2em;
       right: 1em;
       top: 1.6em;
-      color: #f1c68e;
+      color: #ecb062;
       font-weight: 600;
-      /*text-shadow: -1px 1px 0px rgba(202, 150, 72, 1);*/
       margin-top: -5px;
 
       &::after {
         content: '\a0\2605';
         font-size: 1.1em;
         font-weight: bold;
-        color: #e99405;
+        color: #ecb062;
         opacity: 0.5;
       }
     }
