--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -144,7 +144,7 @@
 
 			@media(max-width: 600px) {
 				font-size: 1.4em;
-				margin: 5px 0 10px;
+				margin: 0 0 10px;
 				font-weight: 500;
 				line-height: 1.2em;
 			}
