--- a/src/less/pages/cover.less
+++ b/src/less/pages/cover.less
@@ -43,11 +43,13 @@
 		margin: 0 auto;
 		text-align: 14px;
 		line-height: 1.5;
+		
 		@media(max-width: 600px) {
-			width: 93%;
-			margin: 0 auto;
-			font-size: 0.95em;
+			width: 90%;
+			margin: 15px auto 0;
+			font-size: 0.9em;
 			line-height: 1.6;
+			font-weight: 300;
 		}
 	}
 
