--- a/src/less/pages/resources.less
+++ b/src/less/pages/resources.less
@@ -28,6 +28,10 @@
       text-overflow: ellipsis;
       overflow: hidden;
       text-align: left;
+
+      &:last-of-type {
+        max-width: 90px;
+      }
     }
 
     tbody {
