--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -233,6 +233,10 @@ blockquote pre {
     margin-left: calc(-50vw + 50%) !important;
     margin-right: calc(-50vw + 50%) !important;
   }
+
+  code {
+    font-size: 0.7em;
+  }
 }
 
 .bottomFade {
