--- a/src/less/author/author.less
+++ b/src/less/author/author.less
@@ -25,6 +25,7 @@
 			line-height: 1.5;
 			max-width: 85%;
 			margin: 15px auto 0;
+			font-weight: 300;
 
 			@media(max-width: 600px) {
 				  max-width: 90%;
